# wasm-two-digits-calculator

./: Cargo.toml  README.md  index.html
pkg/: README.md  package.json  wasm_two_digits_calculator.d.ts  wasm_two_digits_calculator.js  wasm_two_digits_calculator_bg.wasm  wasm_two_digits_calculator_bg.wasm.d.ts
src/: lib.rs
