[package]
name = "wasm-two-digits-calculator"
version = "0.1.0"
authors = ["Rameez <ramez.aijaz@gmail.com>"]
description = "A simple 2 digits calculator"
license = "MIT/Apache-2.0"
repository = "https://github.com/yourgithubusername/hello-wasm"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
